--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNYjShGKiHoDLKXtWO24MH6",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,12 +18,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/VimalKandrical/dl_sound_class/blob/Vimal/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "s3f-PvBmNOBh",
         "colab_type": "text"
       },
       "source": [
         "#Deep Learning Project - Classification of Environmental Sound \n",
-        "**Autoren:** Christian von Rotz, Vimal Kandrical\n",
+        "**Autoren:** Vimal Kandrical, Christian von Rotz\n",
         "\n",
         "**Daten:** [Urbansound8k](https://www.kaggle.com/chrisfilo/urbansound8k) \n",
         "\n"
