--- a/main.ipynb
+++ b/main.ipynb
@@ -5,8 +5,13 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4kMiXuUQvIS+IiLhNnqsl",
+      "collapsed_sections": [
+        "9ogoQuuTl5Ez",
+        "e5nQ0g-4mHPg",
+        "0tBd2sw71Fhh"
+      ],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPpbMY9P5uggZjpxF5Y3vtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,17 +33,33 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s3f-PvBmNOBh",
+        "id": "HY4tXjk1lkqF",
         "colab_type": "text"
       },
       "source": [
-        "#Deep Learning Project - Classification of Environmental Sound \n",
+        "#Classification of Environmental Sound\n",
         "**Autoren:**<br> Vimal Kandrical, Christian von Rotz\n",
         "\n",
-        "**Daten:**<br>[Urbansound8k](https://www.kaggle.com/chrisfilo/urbansound8k) \n",
-        "\n",
-        "## Einleitung\n",
-        "\n",
+        "**Daten:**<br>[Urbansound8k](https://www.kaggle.com/chrisfilo/urbansound8k) "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9ogoQuuTl5Ez",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Einleitung"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IGZfcWZvl9SC",
+        "colab_type": "text"
+      },
+      "source": [
         "Im Rahmen des Moduls Deep Learning im CAS Machine Intelligence werden in diesem Projekt Tonaufnahmen von Umgebungsgeräuschen analysiert und mittels Deep Learning klassifiziert.  \n",
         "\n",
         "##Beschreibung der Daten (kaggle.com)\n",
@@ -87,29 +108,118 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e5nQ0g-4mHPg",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Daten laden"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qbETyhGI1eX0",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Dieser Teil muss nur einmal ausgeführt werden, damit die Daten in Colab sind.*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fdhd8uSBmL5-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Google Colab benötigt Zugriff auf Kaggle via API. Der API Token liegt auf dem Google Drive ab."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "CcUKzPPWNFU9",
+        "id": "-A21x4U2mSL7",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 92
         },
-        "outputId": "da501e64-3379-4403-9184-e282c81809ed"
+        "outputId": "d5aeeaf4-9265-418e-d46d-6bec9119b438"
       },
       "source": [
-        "print(\"test\")"
+        "from google.colab import drive\n",
+        "import os\n",
+        "os.chdir(\"/content/drive/My Drive/Colab Notebooks\")\n",
+        "os.listdir()"
       ],
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "test\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Copy of 07_cifar10_norm.ipynb',\n",
+              " 'kaggle.json',\n",
+              " 'main.ipynb',\n",
+              " '.ipynb_checkpoints']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1d5ITnFUtT-i",
+        "colab_type": "text"
+      },
+      "source": [
+        "Zugriffsrechte anpassen und File downloaden"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uEKRaPuwrcuI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!chmod 600 \"/content/drive/My Drive/Colab Notebooks/kaggle.json\"\n",
+        "!kaggle datasets download -d chrisfilo/urbansound8k"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OcVqP2Z3vGn2",
+        "colab_type": "text"
+      },
+      "source": [
+        "Zipfile wird mittels drag&drop in Ordner sample_data verschoben und dann mit dem folgenden Befehl entpackt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PLeY6lcZvTht",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "os.chdir(\"/content/sample_data\")\n",
+        "!unzip urbansound8k.zip"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
