--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
         "0tBd2sw71Fhh"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpbMY9P5uggZjpxF5Y3vtj",
+      "authorship_tag": "ABX9TyNsqSQEZmAB3ddwQook/yTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,11 +75,12 @@
         "\n",
         "**Metadaten:**\n",
         "*   slicefilename:<br>\n",
-        "    The name of the audio file. The name takes the following format: [fsID]-4s[classID]-[occurrenceID]-[sliceID].wav, where:\n",
+        "    The name of the audio file. The name takes the following format:<br><br> [fsID]-4s[classID]-[occurrenceID]-[sliceID].wav<br><br>\n",
+        "    \n",
         "    [fsID] = the Freesound ID of the recording from which this excerpt (slice) is taken\n",
-        "    [classID] = a numeric identifier of the sound class (see description of classID below for further details)\n",
-        "    [occurrenceID] = a numeric identifier to distinguish different occurrences of the sound within the original recording\n",
-        "    [sliceID] = a numeric identifier to distinguish different slices taken from the same occurrence\n",
+        "   <br> [classID] = a numeric identifier of the sound class (see description of classID below for further details)\n",
+        "   <br> [occurrenceID] = a numeric identifier to distinguish different occurrences of the sound within the original recording\n",
+        "   <br> [sliceID] = a numeric identifier to distinguish different slices taken from the same occurrence\n",
         "*   fsID:<br>\n",
         "The Freesound ID of the recording from which this excerpt (slice) is taken\n",
         "*   start:<br>\n",
@@ -134,7 +135,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Google Colab benötigt Zugriff auf Kaggle via API. Der API Token liegt auf dem Google Drive ab."
+        "Google Colab benötigt Zugriff auf Kaggle via API. Der API Token muss unter content abliegen."
       ]
     },
     {
@@ -142,36 +143,16 @@
       "metadata": {
         "id": "-A21x4U2mSL7",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 92
-        },
-        "outputId": "d5aeeaf4-9265-418e-d46d-6bec9119b438"
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "import os\n",
-        "os.chdir(\"/content/drive/My Drive/Colab Notebooks\")\n",
+        "os.chdir(\"/content\")\n",
         "os.listdir()"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Copy of 07_cifar10_norm.ipynb',\n",
-              " 'kaggle.json',\n",
-              " 'main.ipynb',\n",
-              " '.ipynb_checkpoints']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -191,7 +172,9 @@
         "colab": {}
       },
       "source": [
-        "!chmod 600 \"/content/drive/My Drive/Colab Notebooks/kaggle.json\"\n",
+        "!mkdir -p ~/.kaggle\n",
+        "!cp \"/content/kaggle.json\" ~/.kaggle/\n",
+        "!chmod 600 \"/content/kaggle.json\"\n",
         "!kaggle datasets download -d chrisfilo/urbansound8k"
       ],
       "execution_count": 0,
@@ -204,7 +187,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Zipfile wird mittels drag&drop in Ordner sample_data verschoben und dann mit dem folgenden Befehl entpackt"
+        "Zipfile entpacken"
       ]
     },
     {
@@ -215,11 +198,119 @@
         "colab": {}
       },
       "source": [
-        "os.chdir(\"/content/sample_data\")\n",
+        "os.chdir(\"/content\")\n",
         "!unzip urbansound8k.zip"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aOamL8A2iPFr",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Voranalyse"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VhjZDgEiihbr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Bevor die Audiofiles genutzt werden können, muss ihr Aufbau verstanden werden. Diese Informationen stehen ganz am Anfang des WAV Files im sogenannten Header (44 Bytes lang). Folgende Informationen sind relevant:\n",
+        "\n",
+        "Information  | Position\n",
+        "  ------------- | -------------\n",
+        "  Anzahl Channels (mono/stereo)  | 23-24\n",
+        "  Sample rate  | 25-28\n",
+        "Bits pro Sample | 35-36\n",
+        "\n",
+        "(Details zum Aufbau eines WAV (RIFF) Files können [hier](http://www.topherlee.com/software/pcm-tut-wavformat.html) nachgelesen werden.)\n",
+        "\n",
+        "Hier ein Beispiel:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2dTzEG123aVp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import struct\n",
+        "import os\n",
+        "\n",
+        "\n",
+        "def readheader(filename):\n",
+        "  with open(filename, \"rb\") as wavfile:\n",
+        "    header = wavfile.read(44)\n",
+        "    channels = struct.unpack(\"<H\", header[22:24])[0]\n",
+        "    samplerate = struct.unpack(\"<I\", header[24:28])[0]\n",
+        "    bitsprosample = struct.unpack(\"<H\", header[34:36])[0]\n",
+        "  return (channels, samplerate, bitsprosample)\n",
+        "\n",
+        "beispiel = readheader(\"/content/fold1/101415-3-0-2.wav\")\n",
+        "print(\"Anzahl Channels: \", beispiel[0])\n",
+        "print(\"Sample rate: \", beispiel[1])\n",
+        "print(\"Bits pro Sample: \", beispiel[2])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ktE8L3mtz5kz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Analog werden nun alle Audiofiles gelesen und die Charakteristik in einem Dataframe festgehalten."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AG80p8FH2a5e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "pd.options.display.max_columns = 10\n",
+        "\n",
+        "metadaten = pd.read_csv(\"/content/UrbanSound8K.csv\")\n",
+        "#print(metadaten.head()) \n",
+        "#print(metadaten.dtypes) -> passt soweit\n",
+        "\n",
+        "informationen = []\n",
+        "\n",
+        "for i, r in metadaten.iterrows():\n",
+        "  audiofile = os.path.join(os.path.abspath(\"/content/\"),\"fold\"+str(r[\"fold\"])+\"/\",str(r[\"slice_file_name\"]))\n",
+        "  informationen.append(readheader(audiofile))\n",
+        "\n",
+        "aufbau = pd.DataFrame(informationen, columns=['anz_channels','samplerate','bits_pro_sample'])\n",
+        "print(aufbau[\"anz_channels\"].value_counts())\n",
+        "print(aufbau[\"samplerate\"].value_counts())\n",
+        "print(aufbau[\"bits_pro_sample\"].value_counts())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ThqI54Y8A-_Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "Es lässt sich festhalten, dass die Audiofiles bzgl. Anzahl Channels (Mono/Stereo), Samplerate und Bits pro Sample variieren."
+      ]
     }
   ]
 }
