--- a/main.ipynb
+++ b/main.ipynb
@@ -146,7 +146,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "8f5a5c64-f53c-4b60-e867-d5c229e25cc2"
+        "outputId": "39671ac8-e6cb-4deb-f734-82aa2b224468"
       },
       "source": [
         "from google.colab import drive\n",
@@ -154,19 +154,19 @@
         "os.chdir(\"/content\")\n",
         "os.listdir()"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['.config', 'kaggle.json', 'sample_data']"
+              "['.config', 'sample_data']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -189,7 +189,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 91
         },
-        "outputId": "07a48b4c-3e88-491f-e883-a861bf3123cf"
+        "outputId": "ba5ce1b5-f40c-4677-85f4-5b9ecd179202"
       },
       "source": [
         "!mkdir -p ~/.kaggle\n",
@@ -197,15 +197,15 @@
         "!chmod 600 \"/content/kaggle.json\"\n",
         "!kaggle datasets download -d chrisfilo/urbansound8k"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n",
             "Downloading urbansound8k.zip to /content\n",
-            "100% 5.61G/5.61G [01:50<00:00, 51.3MB/s]\n",
-            "100% 5.61G/5.61G [01:50<00:00, 54.7MB/s]\n"
+            "100% 5.60G/5.61G [01:20<00:00, 27.3MB/s]\n",
+            "100% 5.61G/5.61G [01:20<00:00, 74.7MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -230,13 +230,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "7a39d696-a99a-4059-ab5c-5c5173a28c69"
+        "outputId": "142c5306-1caf-4aca-ca9c-899f84731424"
       },
       "source": [
         "os.chdir(\"/content\")\n",
         "!unzip urbansound8k.zip"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -5285,7 +5285,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 73
         },
-        "outputId": "a1a52648-347f-4366-ac4b-b7e3cf69d358"
+        "outputId": "4e667be6-8a39-48fa-b655-b003248a34b9"
       },
       "source": [
         "import struct\n",
@@ -5305,7 +5305,7 @@
         "print(\"Sample rate: \", beispiel[1])\n",
         "print(\"Bits pro Sample: \", beispiel[2])"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -5325,7 +5325,99 @@
         "colab_type": "text"
       },
       "source": [
-        "Analog werden nun alle Audiofiles gelesen und die Charakteristik in einem Dataframe festgehalten."
+        "Zuest lesen wir nun die Klassenzugehörigkeit jedes Audiofiles"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0lkXGsCEYqlJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 813
+        },
+        "outputId": "9e48daf6-0592-46cb-9b6c-c066bc66afa3"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "pd.options.display.max_columns = 11\n",
+        "\n",
+        "metadaten = pd.read_csv(\"/content/UrbanSound8K.csv\")\n",
+        "# Anpassung des Header des Dataframes, da class ein reservierter Begriff ist\n",
+        "metadaten = metadaten.rename({'class': 'class_name'}, axis='columns')\n",
+        "print('Metadaten header', '\\n')\n",
+        "print(metadaten.head()) \n",
+        "print('\\n', 'Datentypen der einzelnen Variablen', '\\n')\n",
+        "print(metadaten.dtypes) #-> passt soweit\n",
+        "print('\\n', 'Klassenzugehörigkeit', '\\n')\n",
+        "print(metadaten.class_name.value_counts())\n",
+        "print('\\n')"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Metadaten header \n",
+            "\n",
+            "      slice_file_name    fsID  start        end  salience  fold  classID  \\\n",
+            "0    100032-3-0-0.wav  100032    0.0   0.317551         1     5        3   \n",
+            "1  100263-2-0-117.wav  100263   58.5  62.500000         1     5        2   \n",
+            "2  100263-2-0-121.wav  100263   60.5  64.500000         1     5        2   \n",
+            "3  100263-2-0-126.wav  100263   63.0  67.000000         1     5        2   \n",
+            "4  100263-2-0-137.wav  100263   68.5  72.500000         1     5        2   \n",
+            "\n",
+            "         class_name  \n",
+            "0          dog_bark  \n",
+            "1  children_playing  \n",
+            "2  children_playing  \n",
+            "3  children_playing  \n",
+            "4  children_playing  \n",
+            "\n",
+            " Datentypen der einzelnen Variablen \n",
+            "\n",
+            "slice_file_name     object\n",
+            "fsID                 int64\n",
+            "start              float64\n",
+            "end                float64\n",
+            "salience             int64\n",
+            "fold                 int64\n",
+            "classID              int64\n",
+            "class_name          object\n",
+            "dtype: object\n",
+            "\n",
+            " Klassenzugehörigkeit \n",
+            "\n",
+            "street_music        1000\n",
+            "engine_idling       1000\n",
+            "air_conditioner     1000\n",
+            "children_playing    1000\n",
+            "dog_bark            1000\n",
+            "drilling            1000\n",
+            "jackhammer          1000\n",
+            "siren                929\n",
+            "car_horn             429\n",
+            "gun_shot             374\n",
+            "Name: class_name, dtype: int64\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h8pHH2DTY9E_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Der Datensatz hat keine regelmässige Verteilung auf die Klassen! \n",
+        "\n",
+        "Wir lesen nun analog oben für jedes Audiofiles die Charakteristik und halten diese in einem Dataframe fest."
       ]
     },
     {
@@ -5337,17 +5429,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 406
         },
-        "outputId": "b08412cc-9eb8-400f-e80f-aa3700527a04"
+        "outputId": "ae8b45e7-480b-42b3-bcbd-000d01f3c0d8"
       },
       "source": [
-        "import pandas as pd\n",
-        "\n",
-        "pd.options.display.max_columns = 10\n",
-        "\n",
-        "metadaten = pd.read_csv(\"/content/UrbanSound8K.csv\")\n",
-        "#print(metadaten.head()) \n",
-        "#print(metadaten.dtypes) -> passt soweit\n",
-        "\n",
         "informationen = []\n",
         "\n",
         "for i, r in metadaten.iterrows():\n",
@@ -5359,7 +5443,7 @@
         "print(aufbau[\"samplerate\"].value_counts())\n",
         "print(aufbau[\"bits_pro_sample\"].value_counts())"
       ],
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -5399,6 +5483,68 @@
       "source": [
         "Es lässt sich festhalten, dass die Audiofiles bzgl. Anzahl Channels (Mono/Stereo), Samplerate und Bits pro Sample variieren."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vMBlwgiWam2g",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Vorbereitung der Daten aufgrund der Voranalyse"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oKVM-xdzbSWy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Wir haben festgestellt, dass die Datensätze unterschiedliche Ausprägungen und den Daten haben und bezüglich der Datenkonsistenz vorbereitet/angepasst werden müssen. Dazu verwenden wir die <b> Librosa load()</b> Funktion.\n",
+        "<ul>\n",
+        "<li>Anzahl channels: werden auf 1 reduziert</li>\n",
+        "<li>Samplerate: konvertiert alle Samples auf 22.050 KHz</li>\n",
+        "<li>Bits pro sample: wird auf einen range von -1 und 1 normalisiert</li>\n",
+        "</ul>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4DwFkBa4cBW3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import librosa\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WJ3xPT-gcbDT",
+        "colab_type": "text"
+      },
+      "source": [
+        "<b> Anzahl Kanäle </b>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OYuBbMUlccCe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
